Update servers with notes
